--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Account/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Account/Create.cshtml
@@ -80,6 +80,8 @@
 
 @section footer_link{
 
+    <partial name="_ValidationScriptsPartial" />
+
     <script>
         $(document).ready(function(){
             $(".form-gp input").each(function(x){
