--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Role/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Role/Create.cshtml
@@ -15,11 +15,11 @@
     </div>
 </div>
 @section footer_link{
-
+    <partial name="_ValidationScriptsPartial" />
     <script>
-        $(document).ready(function(){
-            $(".form-gp input").each(function(x){
-                if($(this).val()!=""){
+        $(document).ready(function () {
+            $(".form-gp input").each(function (x) {
+                if ($(this).val() != "") {
                     $(this).focus()
                 }
             })
