--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/_Layout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                                     </div>
                                 </li>
                                 <li><a href="#" class="d-block">@user.UserName</a></li>
-                                <li><a href="#" class="d-block">Profil</a></li>
+                                <li><a href="/UserAdmin" class="d-block">Profil</a></li>
                                 <li><a href="/Signin/LogOut" class="d-block"><i style="font-size:larger;font-weight:700;" class="bi bi-power mx-1"></i>Log Out</a></li>
                             </ul>
                         }
