--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -1,4 +1,10 @@
-﻿<!doctype html>
+﻿@inject PorfolioDbContext dbContext;
+
+@{
+    List<MessengeUser> messenge = dbContext.MessengeUsers.Where(dr => dr.User.UserName == User.Identity.Name).ToList();
+ }
+
+<!doctype html>
 <html class="no-js" lang="en">
 
 <head>
